--- a/src/components/PlatformFunctionality/PlatformFunctionality.scss
+++ b/src/components/PlatformFunctionality/PlatformFunctionality.scss
@@ -79,18 +79,18 @@
                 padding: 0;
 
                 img {
-                    width: 100%;
-
+                    height: 100%;
                     &.back-img {
+                        
                         max-height: 100%;
                         border-radius: 10px;
                         position: absolute;
                         top: 50%;
                         left: 50%;
                         transform: translate(-50%, -50%);
-                        width: 389px;
+                        // width: 389px;
                         height: auto;
-                        object-fit: cover;
+                        
                         z-index: 1;
                         /* Cambiado para asegurarse de que esté detrás de star-card */
                     }
@@ -137,7 +137,7 @@
 
                 .imagen .star-card{
                     bottom: 20%;
-                    margin-left: 80px;
+                    margin-left: 20%;
                 }
             }
 
@@ -147,14 +147,21 @@
                 margin-left: 0px;
                 justify-content: center;
                 align-items: center;
-
+                
                 .features {
                     width: 90%;
                 }
 
                 .imagen {
+                    display: flex;
                     width: 100%;
-                    height: 400px;
+                    min-height: 300px;
+                    margin: 12px 0 16px 0;
+                    img{
+                        // width: 100;
+                        // height: 100%;
+                    }
+                    
                 }
             }
             
