--- a/src/components/ServicesSection/ServicesSection.scss
+++ b/src/components/ServicesSection/ServicesSection.scss
@@ -73,13 +73,14 @@
                         top: -22px;
                         left: -60px;
                         width: 142px;
+                        overflow: hidden;
             }
             .onda-2{
                         position: absolute;
                         bottom: -24px;
-                        right: -60px;
+                        right: -5%;
                         width: 142px;
-                        
+                        overflow: hidden;
             }
 
             .card-1{
